Overflow Personal Fix

--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -12,6 +12,7 @@
   .Burger {
     width: 350px;
     height: 300px;
+    overflow: auto;
   }
 }
 
